Split codecs up into decoders and encoders.